--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.4",
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "mongoose": "^6.3.8",
     "next": "12.1.6",
     "react": "18.2.0",
